# reg_loc

./: .gitignore  CMakeLists.txt  husky.urdf.xacro  package.xml  plugin_description.xml
cfg/: test.cfg  test.cfg~
include/radbot_dashboard/: dashboard_panel.h  thumb_widget.h
include/registration_localization/: alignment_node.hpp  alignment_node.hpp~  dashboard_panel.h  dashboard_panel.h~  point_selector.h  point_selector.h~  save_marker.hpp  save_marker.hpp~
launch/: master.launch
src/: algorithm.cpp  algorithm.cpp~  cloudloop.cpp  dashboard_panel.cpp  dashboard_panel.cpp~  dashboard_panel.h  dashboard_panel.ui  dashboard_panel_v2.ui  matching.cpp  matching.cpp~  planes.cpp  planes2.cpp  planes2.cpp~  point_selector.cpp  save_marker.cpp  searchall.cpp  searchloop.cpp  segmentation.cpp  segmentation.cpp~  show_keypoints.cpp  show_keypoints.cpp~  showcloud.cpp  showclouds.cpp  showclouds.cpp~  testing.cpp  testing2.cpp  testing2.cpp~  thumb_widget.cpp
